Remaining Cole's comments.

--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -231,9 +231,9 @@ When the detection of GW150914 was first announced, many were surprised that it 
 
 \textbf{So then why do the gravitational-wave sources exist at all?} Given the above, one might conclude that gravitational-wave driven compact binary mergers do not exist. Yet their existence and detection were expected \citep{ratesdoc}. In fact, \citet{Dyson:1962} conjectured about the existence of merging neutron star binaries even before the first neutron star was observed; \citet{Tutukov:1973} argued that binary compact objects must naturally (albeit  rarely, and at wide separations in their model) form as a result of massive binary evolution; \citet{vdHDeLoore:1973} argued that tight high-mass X-ray binaries -- progenitors of compact object binaries -- must also form; and the Hulse--Taylor binary pulsar \citep{HulseTaylor:1975} demonstrated the existence of binary compact objects that would merge within the age of the Universe.
 
-Three leading formation scenarios \ajf{have been proposed} for merging compact-object binaries: (i) finely tuned binary evolution that brings the stars closer, \ajf{but not all the way to merger, when they expand and interact}; (ii) finely tuned stellar evolution that prevents the parent stars from expanding at all; and (iii) assembly of a close binary from black holes that formed from stars \ajf{that were not born together in a binary}. Contrived as these scenarios sound, all three might plausibly contribute to the production of binary black hole mergers. \ajf{And as we'll see in \autoref{merge}, only a small fraction of stars need to end up in merging black hole binaries in order to explain the observed merger rates: even quite unusual or (apparently) finely tuned evolutionary pathways could therefore be viable candidates.}
+Three leading formation scenarios \ajf{have been proposed} for merging compact-object binaries: (i) finely tuned binary evolution that brings the stars closer, \ajf{but not all the way to merger, when they expand and interact}; (ii) finely tuned stellar evolution that prevents the parent stars from expanding at all; and (iii) assembly of a close binary from black holes that formed from stars \ajf{that were not born together in a binary}. Contrived as these scenarios sound, all three might plausibly contribute to the production of binary black hole mergers.  And as we'll see in \autoref{merge}, only a small fraction of stars, \ilya{of order one in a million}, need to end up in merging black hole binaries in order to explain the observed merger rates: even quite unusual or (apparently) finely tuned evolutionary pathways could therefore be viable candidates.
 
- We explore the three leading formation scenarios in more detail below, as well as the \ajf{possibility that some combination of these effects may occur on the way to merger}. (We won't discuss some of the more exotic proposed mechanisms, such as the fragmentation of a single stellar core into two black holes \citep{Loeb:2016} -- \citet{Woosley:2016,Dai:2017} discuss the problems with this picture -- or non-astrophysical formation scenarios such as primordial black holes of cosmological origin \citep[e.g.,][]{Bird:2016}.)
+We explore the three leading formation scenarios in more detail below, as well as the \ajf{possibility that some combination of these effects may occur on the way to merger}. (We won't discuss some of the more exotic proposed mechanisms, such as the fragmentation of a single stellar core into two black holes \citep{Loeb:2016} -- \citet{Woosley:2016,Dai:2017} discuss the problems with this picture -- or non-astrophysical formation scenarios such as primordial black holes of cosmological origin \citep[e.g.,][]{Bird:2016}.)
 
 \subsection{The Candidate Formation Scenarios}
 \subsubsection{\ajf{Coming closer later in life:} classical isolated binary evolution via the common-envelope phase}
@@ -261,7 +261,7 @@ The evolution of this system is sketched out in a van den Heuvel -- style diagra
 \item[h.] Following further wind-driven mass loss from the secondary and its collapse into a black hole, the black hole binary is formed.  While this entire process takes only a few million years from the formation of a stellar binary to the formation of a binary black hole, the subsequent inspiral through gravitational-wave emission will last for around 10 billion years before merger.
 \end{enumerate}
 
-Of course, this relatively simple picture holds many uncertainties: the rate of mass loss through winds, particularly during specific stellar evolutionary phases such as from luminous blue variables \citep[massive supergiant stars with significant outbursts and eruptions and associated rapid mass loss,][]{Mennekens:2014}  and its dependence on metallicity; the fraction of the donated mass that is added to the accretor during stable mass transfer and the specific angular momentum of the mass that is removed from the binary; the response of a star to mass loss and the onset of a common envelope phase \citep{Pavlovskii:2017}; common-envelope survival and the amount of binary hardening associated with the envelope ejection \ilya{\citep[e.g.,][]{Kruckow:2016}}; supernova fallback and natal kicks for black holes \citep[e.g.,][]{Repetto:2012,Mandel:2015kicks}; the possible \ajf{*** do you mean to observed merger rates?*** contribution} of double-core common envelopes when unstable mass transfer is initiated between two evolved stars; and the role of dynamically stable non-conservative mass transfer onto a lower-mass compact donor in achieving sufficient binary hardening  \citep{vandenHeuvel:2017,Neijssel:2018}.  We will discuss the possibilities of addressing some of these with future gravitational-wave observations in \autoref{prospect}.
+Of course, this relatively simple picture holds many uncertainties: the rate of mass loss through winds, particularly during specific stellar evolutionary phases such as from luminous blue variables \citep[massive supergiant stars with significant outbursts and eruptions and associated rapid mass loss,][]{Mennekens:2014}  and its dependence on metallicity; the fraction of the donated mass that is added to the accretor during stable mass transfer and the specific angular momentum of the mass that is removed from the binary; the response of a star to mass loss and the onset of a common envelope phase \citep{Pavlovskii:2017}; common-envelope survival and the amount of binary hardening associated with the envelope ejection \ilya{\citep[e.g.,][]{Kruckow:2016}}; supernova fallback and natal kicks for black holes \citep[e.g.,][]{Repetto:2012,Mandel:2015kicks}; the \ilya{possibility of} double-core common envelopes when unstable mass transfer is initiated between two evolved stars \ilya{\citep{BetheBrown:1998,Dewi:2006}}; and the role of dynamically stable non-conservative mass transfer onto a lower-mass compact donor in achieving sufficient binary hardening  \citep{vandenHeuvel:2017,Neijssel:2018}.  We will discuss the possibilities of addressing some of these with future gravitational-wave observations in \autoref{prospect}.
 
 \subsubsection{Abracadabra, thou shalt not expand: chemically homogeneous evolution}\label{sec:CHE}
 
@@ -294,13 +294,13 @@ The last possibility we will describe is that the merging black holes may not ha
 \begin{enumerate}
 \item[a.] Suppose the two black holes formed in a dense stellar environment such as a globular cluster.  
 \item[b.] As the most massive objects in the cluster, the black holes naturally sink toward the cluster center as energy is equipartitioned throughout the cluster in the process known as mass segregation \ajf{\citep[but see][]{Trenti:2013}}.  Once there, they may form binaries through three-body interactions, or by substituting into existing binaries: in a $2+1$ interaction, the lightest object is usually ejected in favor of the two heavier objects forming a binary.  
-\item[c,d.] Subsequent interactions with other objects in the cluster -- the matchmakers -- will gradually tighten the black-hole binary: the interlopers are likely to leave with slightly higher \ajf{speeds} than they arrived with, each time removing energy from the binary.   
+\item[c,d.] \ilya{If the orbital speed of the binary's components is greater than the typical speed of stars in the cluster (the binary is 'hard'}, then subsequent interactions with other objects in the cluster -- the matchmakers -- will gradually tighten the black-hole binary. The interlopers are likely to leave with slightly higher speeds than they arrived with, each time removing energy from the binary.   \ilya{Meanwhile, 'soft' binaries, with orbital speeds smaller than the velocity dispersion in the cluster, will be disrupted.}
 \item[e.] If the density of objects is high enough to ensure a suitable rate of interactions, the binary will be hardened until it is compact enough to merge through gravitational-wave emission, provided it does not get kicked out of the cluster through a recoil kick from the last interaction -- and even then, it may still go on to merge outside of the cluster.  
 \end{enumerate}
 
 The prospects for these dynamically formed merging binary black holes in globular clusters and young massive stellar clusters have been explored through a series of analytical estimates and numerical experiments by \citet{Sigurdsson:1993,Kulkarni:1993,PZwart:2000,OLeary:2006,Banerjee:2010,Downing:2011,Morscher:2015,Mapelli:2016,Rodriguez:2016} and others.  \citet{OLeary:2008} \citep[but see][]{Tsang:2013} and \ilya{\citet{AntoniniPerets:2012}} explored dynamical formation in galactic nuclei with a massive black hole, while \citet{MillerLauburg:2008} and \ilya{\citet{AntoniniRasio:2016} argued that galactic nuclei without a massive black hole are a favored site for dynamical formation, in part because the high escape velocity makes merger products more likely to be retained.}  \citet{Bartos:2016} and \citet{Stone:2016} have described the role that an accretion disk in an active galactic nucleus could play in enhancing the rate of binary black hole mergers.
 
-\subsection{\ilya{A team effort: combining multiple interactions}}
+\subsubsection{\ilya{A team effort: combining multiple interactions}}
 
 \ilya{Of course, the channels outlined above need not be distinct, and the same binary may have benefitted from multiple types of interaction while en route to coalescence.  Black holes brought to merger by dynamical interaction in globular clusters may be part of mass-transferring binaries earlier in their evolutionary history.  Mass-transferring binaries that are too wide at the end of binary evolution to merge in the age of the Universe may be helped along by subsequent dynamical encounters \citep[e.g.,][]{Belczynski:2014VMS}.  The more massive star in an isolated binary may evolve chemically homogeneously, while its less massive companion expands and donates mass \citep{Marchant:2017}.}
 
