--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -294,7 +294,7 @@ The last possibility we will describe is that the merging black holes may not ha
 \begin{enumerate}
 \item[a.] Suppose the two black holes formed in a dense stellar environment such as a globular cluster.  
 \item[b.] As the most massive objects in the cluster, the black holes naturally sink toward the cluster center as energy is equipartitioned throughout the cluster in the process known as mass segregation \ajf{\citep[but see][]{Trenti:2013}}.  Once there, they may form binaries through three-body interactions, or by substituting into existing binaries: in a $2+1$ interaction, the lightest object is usually ejected in favor of the two heavier objects forming a binary.  
-\item[c,d.] \ilya{If the orbital speed of the binary's components is greater than the typical speed of stars in the cluster (the binary is 'hard'}, then subsequent interactions with other objects in the cluster -- the matchmakers -- will gradually tighten the black-hole binary. The interlopers are likely to leave with slightly higher speeds than they arrived with, each time removing energy from the binary.   \ilya{Meanwhile, 'soft' binaries, with orbital speeds smaller than the velocity dispersion in the cluster, will be disrupted.}
+\item[c,d.] \ilya{If the orbital speed of the binary's components is greater than the typical speed of stars in the cluster (the binary is 'hard')}, then subsequent interactions with other objects in the cluster -- the matchmakers -- will gradually tighten the black-hole binary. The interlopers are likely to leave with slightly higher speeds than they arrived with, each time removing energy from the binary.   \ilya{Meanwhile, 'soft' binaries, with orbital speeds smaller than the velocity dispersion in the cluster, will be disrupted.}
 \item[e.] If the density of objects is high enough to ensure a suitable rate of interactions, the binary will be hardened until it is compact enough to merge through gravitational-wave emission, provided it does not get kicked out of the cluster through a recoil kick from the last interaction -- and even then, it may still go on to merge outside of the cluster.  
 \end{enumerate}
 
