Added a couple more early DNS refs.

--- a/Mandel.bib
+++ b/Mandel.bib
@@ -1,21 +1,3 @@
-
-@ARTICLE{Trenti:2013,
-   author = {{Trenti}, M. and {van der Marel}, R.},
-    title = "{No energy equipartition in globular clusters}",
-  journal = {\mnras},
-archivePrefix = "arXiv",
-   eprint = {1302.2152},
- keywords = {stars: kinematics and dynamics, globular clusters: general},
-     year = 2013,
-    month = nov,
-   volume = 435,
-    pages = {3272-3282},
-      doi = {10.1093/mnras/stt1521},
-   adsurl = {http://adsabs.harvard.edu/abs/2013MNRAS.435.3272T},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-
  @ARTICLE{Mandel:2007rates,
 author = {{Mandel}, I. and {Brown}, D.~A. and {Gair}, J.~R. and {Miller}, M.~C.},
     title = "{Rates and Characteristics of Intermediate Mass Ratio Inspirals Detectable by Advanced LIGO}",
@@ -20740,6 +20722,60 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{RodriguezAntonini:2018,
+   author = {{Rodriguez}, C.~L. and {Antonini}, F.},
+    title = "{A Triple Origin for the Heavy and Low-Spin Binary Black Holes Detected by LIGO/Virgo}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1805.08212},
+ primaryClass = "astro-ph.HE",
+ keywords = {Astrophysics - High Energy Astrophysical Phenomena},
+     year = 2018,
+    month = may,
+   adsurl = {http://adsabs.harvard.edu/abs/2018arXiv180508212R},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
+@ARTICLE{FlanneryvdH:1975,
+   author = {{Flannery}, B.~P. and {van den Heuvel}, E.~P.~J.},
+    title = "{On the origin of the binary pulsar PSR 1913 + 16}",
+  journal = {\aap},
+ keywords = {Binary Stars, Pulsars, Stellar Evolution, X Ray Sources, Gravitational Collapse, Main Sequence Stars, Orbital Elements, Supernova Remnants, X Ray Stars},
+     year = 1975,
+    month = feb,
+   volume = 39,
+    pages = {61-67},
+   adsurl = {http://adsabs.harvard.edu/abs/1975A%26A....39...61F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
+@ARTICLE{DeLoore:1975,
+   author = {{De Loore}, C. and {De Greve}, J.~P. and {de Cuyper}, J.~P.},
+    title = "{Evolution of massive close binaries. II - The POST X-ray binary stage: Origin of run-away and binary pulsars}",
+  journal = {\apss},
+ keywords = {Binary Stars, Pulsars, Stellar Evolution, Supergiant Stars, X Ray Sources, B Stars, Black Holes (Astronomy), Neutron Stars, O Stars, Stellar Mass, Stellar Mass Ejection},
+     year = 1975,
+    month = aug,
+   volume = 36,
+    pages = {219-225},
+      doi = {10.1007/BF00681952},
+   adsurl = {http://adsabs.harvard.edu/abs/1975Ap%26SS..36..219D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Trenti:2013,
+   author = {{Trenti}, M. and {van der Marel}, R.},
+    title = "{No energy equipartition in globular clusters}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1302.2152},
+ keywords = {stars: kinematics and dynamics, globular clusters: general},
+     year = 2013,
+    month = nov,
+   volume = 435,
+    pages = {3272-3282},
+      doi = {10.1093/mnras/stt1521},
+   adsurl = {http://adsabs.harvard.edu/abs/2013MNRAS.435.3272T},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
