--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -50,6 +50,7 @@
 \def\pasa{Publications of the Astron.~Soc.~of Australia}
 \def\aapr{Astron.~\& Astrophys.~Reviews}
 \def\physrep{Physics Reports}
+\def\apss{Ap\&SS}
 
 
 \newcommand{\todo}[1]{\textcolor{red}{#1}}
@@ -228,7 +229,7 @@ When the detection of GW150914 was first announced, many were surprised that it 
 \caption{Maximal stellar extent at solar metallicity during various phases of stellar evolution for a non-rotating star with a given initial mass; based on the implementation of single stellar evolution models of \citet{Hurley:2000} in the COMPAS binary population synthesis code \citep{Stevenson:2017}.   The star expands from its zero-age main sequence (ZAMS) size onwards through the main sequence (MS), Hertzsprung gap (HG), core Helium burning (CHeB) stages, and the asymptotic giant branch (AGB) for lower-mass stars.  The Roche lobe radius (maximal stellar size beyond which a star would engage in mass transfer \citep{Eggleton:1983}) is plotted for an equal mass circular binary which would have the maximum separation to allow a merger within the age of the Universe (see \autoref{fig:periapsis}) assuming initial mass to compact object mass conversion as in \autoref{fig:BHremnant}.\label{fig:Rmax} }
 \end{figure}
 
-\textbf{So then why do the gravitational-wave sources exist at all?} Given the above, one might conclude that gravitational-wave driven compact binary mergers do not exist. Yet their existence and detection were expected \citep{ratesdoc}. In fact, \citet{Dyson:1962} conjectured about the existence of merging neutron star binaries even before the first neutron star was observed; \citet{Tutukov:1973} argued that binary compact objects must naturally (albeit  rarely, and at wide separations in their model) form as a result of massive binary evolution; \citet{vdHDeLoore:1973} argued that tight high-mass X-ray binaries -- progenitors of compact object binaries -- must also form; and the Hulse--Taylor binary pulsar \citep{HulseTaylor:1975} demonstrated the existence of binary compact objects that would merge within the age of the Universe.
+\textbf{So then why do the gravitational-wave sources exist at all?} Given the above, one might conclude that gravitational-wave driven compact binary mergers do not exist. Yet their existence and detection were expected \citep{ratesdoc}. In fact, \citet{Dyson:1962} conjectured about the existence of merging neutron star binaries even before the first neutron star was observed; \citet{Tutukov:1973} predicted that binary compact objects must naturally (albeit rarely, and at wide separations in their model) form as a result of massive binary evolution; \citet{vdHDeLoore:1973} argued that tight high-mass X-ray binaries -- progenitors of compact object binaries -- must also form; and the Hulse--Taylor binary pulsar \citep{HulseTaylor:1975} demonstrated the existence of binary compact objects that would merge within the age of the Universe \citep[for early explanations of its formation in the context of binary evolution, see][]{FlanneryvdH:1975,DeLoore:1975}.
 
 Three leading formation scenarios have been proposed for merging compact-object binaries: (i) finely tuned binary evolution that brings the stars closer as they expand and interact; (ii) finely tuned stellar evolution that prevents the parent stars from expanding at all; and (iii) assembly of a close binary from black holes that formed from stars not born in the same binary. Contrived as these scenarios sound, all three might plausibly contribute to the production of binary black hole mergers.  And as we'll see in \autoref{merge}, only a small fraction of stars, of order one in a million, need to end up in merging black hole binaries in order to explain the observed merger rates: even quite unusual or (apparently) finely tuned evolutionary pathways could therefore be viable candidates.
 
@@ -297,7 +298,7 @@ The last possibility we will describe is that the merging black holes may not ha
 \item[e.] If the density of objects is high enough to ensure a suitable rate of interactions, the binary will be hardened until it is compact enough to merge through gravitational-wave emission, provided it does not get kicked out of the cluster through a recoil kick from the last interaction -- and even then, it may still go on to merge outside of the cluster.  
 \end{enumerate}
 
-The prospects for these dynamically formed merging binary black holes in globular clusters and young massive stellar clusters have been explored through a series of analytical estimates and numerical experiments by \citet{Sigurdsson:1993,Kulkarni:1993,PZwart:2000,OLeary:2006,Banerjee:2010,Downing:2011,Morscher:2015,Mapelli:2016,Rodriguez:2016} and others.  \citet{OLeary:2008} \citep[but see][]{Tsang:2013} and \ilya{\citet{AntoniniPerets:2012}} explored dynamical formation in galactic nuclei with a massive black hole, while \citet{MillerLauburg:2008} and \ilya{\citet{AntoniniRasio:2016} argued that galactic nuclei without a massive black hole are a favored site for dynamical formation, in part because the high escape velocity makes merger products more likely to be retained.}  \citet{Bartos:2016} and \citet{Stone:2016} have described the role that an accretion disk in an active galactic nucleus could play in enhancing the rate of binary black hole mergers.
+The prospects for these dynamically formed merging binary black holes in globular clusters and young massive stellar clusters have been explored through a series of analytical estimates and numerical experiments by \citet{Sigurdsson:1993,Kulkarni:1993,PZwart:2000,OLeary:2006,Banerjee:2010,Downing:2011,Morscher:2015,Mapelli:2016,Rodriguez:2016} and others.  \citet{OLeary:2008} \citep[but see][]{Tsang:2013} and \citet{AntoniniPerets:2012} explored dynamical formation in galactic nuclei with a massive black hole, while \citet{MillerLauburg:2008} and \citet{AntoniniRasio:2016} argued that galactic nuclei without a massive black hole are a favored site for dynamical formation, in part because the high escape velocity makes merger products more likely to be retained.  \citet{Bartos:2016} and \citet{Stone:2016} have described the role that an accretion disk in an active galactic nucleus could play in enhancing the rate of binary black hole mergers.
 
 \subsubsection{A team effort: combining multiple interactions}
 
@@ -306,9 +307,6 @@ Of course, the channels outlined above need not be distinct, and the same binary
 Hierarchical triple systems, with a tight inner binary and a third companion on a wider outer orbit are a particularly promising combination of the isolated evolution and dynamical formation channels.  A significant fraction of massive stars appear to be born in triples and higher multiplicity systems \citep{DucheneKraus:2013}.  Triples may also be formed dynamically through binary--binary scatterings \citep{MillerHamilton:2002b}.  Massive black holes in galactic nuclei --- or intermediate-mass black holes in globular clusters --- may also act as effective triple companions.   
 
 When the outer binary's orbit is $\gtrsim 5$ times wider than the inner orbit, the triple will be stable (though it may still be driven to instability by mass loss \citep[e.g.,][]{PeretsKratter:2012}).  If the inner and outer orbits in a stable triple have a high relative inclination angle, the transfer of angular momentum between these orbits can increase the eccentricity of the inner binary while keeping its semi-major axis roughly constant. For suitable initial conditions, these Lidov-Kozai oscillations in eccentricity and orbital inclination \citep{Lidov:1962,Kozai:1962} may lead to a drastic growth in the inner binary's eccentricity \citep[for a review, see][]{Naoz:2016}, reducing the binary's periapsis to the point where gravitational-wave emission can harden the binary to merger.  Recent arguments that Lidov-Kozai cycles could contribute to binary black hole mergers include \citet{SilbeeTremaine:2017} who explored isolated triples, \citet{Antonini:2016} in the context of dynamically formed triples in globular clusters, and \citet{Hoang:2018} who considered triples with a galactic-center massive black hole as the outer companion.
-
-
-%Dynamical formation and isolated binary evolution mechanisms are of course not mutually exclusive; for example, the inner binaries in hierarchical triple systems may evolve as isolated binaries, but may then be brought together more efficiently through Lidov-Kozai oscillations \citep{Lidov:1962,Kozai:1962}; see, e.g., \citet{PeretsKratter:2012,Belczynski:2014VMS}.
 
 
 \section{Expected properties of merging systems}\label{merge}
@@ -393,7 +391,7 @@ Chemically homogeneous evolution has a much stronger preference for equal masses
 \subsubsection{Black hole spin magnitudes and directions}
 The spins of merging black holes may carry imprints of their evolutionary history. 
 
-Isolated binaries, including those formed through chemically homogeneous evolution, are generally expected to have preferentially aligned spins after undergoing episodes of mass transfer and/or tidal coupling, although natal kicks and possible spin tilts during supernovae could lead to misalignment \citep[e.g.,][]{Farr:2011,Tauris:2017}.  Meanwhile, the spin directions \ajf{for dynamically formed binaries} are likely to be distributed \ajf{isotropically}  \citep[e.g.,][]{Rodriguez:2016spin}.  \ilya{On the other hand, black holes merging through the Lidov-Kozai resonance in hierarchical triples could preferentially have spins in the orbital plane \citep{LiuLai:2018}.}
+Isolated binaries, including those formed through chemically homogeneous evolution, are generally expected to have preferentially aligned spins after undergoing episodes of mass transfer and/or tidal coupling, although natal kicks and possible spin tilts during supernovae could lead to misalignment \citep[e.g.,][]{Farr:2011,Tauris:2017}.  Meanwhile, the spin directions \ajf{for dynamically formed binaries} are likely to be distributed \ajf{isotropically}  \citep[e.g.,][]{Rodriguez:2016spin}.  On the other hand, black holes merging through the Lidov-Kozai resonance in hierarchical triples could preferentially have spins in the orbital plane \citep{LiuLai:2018,RodriguezAntonini:2018}.
 
 Spin magnitudes may also depend sensitively on evolutionary history.  \ajf{A} massive star may contain a \ajf{large amount} of angular momentum, far in excess of the maximum allowed for a spinning black hole. \ajf{However,} the vast majority of that angular momentum will be contained in the outer layers of the star and can therefore \ajf{readily} be lost through winds or \ajf{via} envelope stripping by a companion.  Therefore, black holes formed from stars that were rapidly spinning at some point in their evolution may still spin slowly unless the stars are spun up through mass transfer or tides shortly before collapse \citep{Kushnir:2016,HotokezakaPiran:2017,Zaldarriaga:2017} or during the supernova itself \citep{Batta:2017,Schroeder:2018}.   This argument for slowly spinning black holes in compact binaries is potentially in conflict with the claimed observations of rapid spins in black-hole high mass X-ray binaries \citep{MillerMiller:2015}. \ajf{***Moved from Section 2:*** However, the spin magnitude measurements in X-ray binaries could be very sensitive to the modelling assumptions, and the systematic errors may dominate the statistical ones \citep[e.g.,][]{Basak:2017,Kawano:2017}. Moreover, there may be significant differences in the evolutionary channels and environments of the locally observed high-mass X-ray binaries and the binary black holes observed in gravitational waves \citep[][and see \autoref{environ}]{HotokezakaPiran:2017}.}
 
@@ -475,10 +473,10 @@ The future of gravitational-wave astronomy holds the thrilling prospect of addre
 
 
 \begin{acknowledgements}
-\ilya{We would like to thank Christopher Berry, Cole Miller, Fred Rasio, Dorottya Sz\'{e}csi, and Thomas Tauris for comments that significantly improved this manuscript.}
+\ilya{We would like to thank Christopher Berry, Cole Miller, Fred Rasio, Dorottya Sz\'{e}csi, and Thomas Tauris for comments that significantly improved this manuscript, and Lev Yungelson and Ed van den Heuvel for providing a historical perspective.}
 
 %IM thanks all of the people who have guided him to understand stellar and binary evolution, foremost among them Selma de Mink.   
-\ilya{IM is grateful to} the students who contributed to building COMPAS (Simon Stevenson, Alejandro Vigna G\'{o}mez, Coenraad Neijssel, Jim Barrett, Sebastian Gaebel) and external collaborators (including Stephen Justham, Philipp Podsiadlowski, and \ilya{especially Selma de Mink}).  Coenraad Neijssel deserves additional gratitude for assistance with figures \ref{fig:Rmax} and \ref{fig:BHremnant}. Thanks also to Vicky Kalogera and Will Farr for stimulating discussions spanning many years. 
+\ilya{IM is grateful to the students who contributed to building COMPAS (Simon Stevenson, Alejandro Vigna G\'{o}mez, Coenraad Neijssel, Jim Barrett, Sebastian Gaebel) and external collaborators (including Stephen Justham, Philipp Podsiadlowski, and especially Selma de Mink).  Coenraad Neijssel deserves additional gratitude for assistance with figures \ref{fig:Rmax} and \ref{fig:BHremnant}. Thanks also to  Will Farr, Vicky Kalogera and Gijs Nelemans for stimulating discussions spanning many years.}
 
 AF is grateful for the astro-tourism.
 \end{acknowledgements}
