--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -317,24 +317,24 @@ Other than the LIGO and Virgo sources, there are no known direct observations of
 
 For the isolated binary evolution channel (\autoref{form:isol}) this modeling typically uses a population synthesis approach, i.e. forward modelling of large populations of stellar binaries distributed according to observed initial mass and separation distributions, some (small) fraction of which end up as merging binary black holes. Population synthesis techniques can be applied either to initial binaries at formation, or to specific observed systems at intermediate evolutionary stages, such as Cygnus X-1 \citep{Bulik:2008} and Cygnus X-3 \citep{CygnusX3:2012}.  
 
-\ajf{Models of the dynamical formation channel} are typically based on either computationally expensive N-body cluster models with direct integration of the equations of motion for each object, or a less computationally costly Monte Carlo approach in which the evolution of the distribution of the cluster components in phase space is coupled with stochastically sampled strong 3-body and 4-body interactions modeled with few-body dynamics, or semi-analytical prescriptions that attempt to emulate these methods at a fraction of the computational cost. \ajf{***this last piece is confusing -- aren't we already talking about how monte carlo simulations are computationally cheap? are the semi-analytical prescriptions part of the monte carlo approach, or a 3rd distinct option?***}
+Models of the dynamical formation channel are typically based on either (i) computationally expensive N-body cluster models with direct integration of the equations of motion for each object, or (ii) a less computationally costly Monte Carlo approach in which the evolution of the distribution of the cluster components in phase space is coupled with stochastically sampled strong 3-body and 4-body interactions modeled with few-body dynamics, or (iii) semi-analytical prescriptions that attempt to emulate these methods at a fraction of the computational cost. 
 
 \subsection{Merger rates}
 
-\ilya{Here we outline} high-level estimates of merger rates for each of the three candidate formation channels. The value of \ajf{this} back-of-the-envelope merger rate analysis is not so much in matching the rate inferred from gravitational-wave observations a posteriori as in setting the stage for some of the predictions of the properties of merging binaries (see below) and the discussion of evolutionary uncertainties (see \autoref{prospect}).  That said, the merger rate predictions for isolated binary evolution via the common envelope phase are consistent with the observed rate of binary black hole mergers of around $\sim 10$ to $\sim 200$ Gpc$^{-3}$ yr$^{-1}$ \citep{GW150914:rates,GW170104} (see \citet{ratesdoc} for a slightly dated summary); dynamical formation rates tend toward the lower end of this range \citep{Rodriguez:2016,Park:2017,FragioneKocsis:2018}; and chemically homogeneous evolution could yield tens of mergers per Gpc$^{3}$ per yr$^{-1}$ in the local Universe \citep{MandeldeMink:2016,Marchant:2016}.
+Here we outline high-level estimates of merger rates for each of the three candidate formation channels. The value of this back-of-the-envelope merger rate analysis is not so much in matching the rate inferred from gravitational-wave observations a posteriori as in setting the stage for some of the predictions of the properties of merging binaries (see below) and the discussion of evolutionary uncertainties (see \autoref{prospect}).  That said, the merger rate predictions for isolated binary evolution via the common envelope phase are consistent with the observed rate of binary black hole mergers of around $\sim 10$ to $\sim 200$ Gpc$^{-3}$ yr$^{-1}$ \citep{GW150914:rates,GW170104} (see \citet{ratesdoc} for a slightly dated summary); dynamical formation rates tend toward the lower end of this range \citep{Rodriguez:2016,Park:2017,FragioneKocsis:2018}; and chemically homogeneous evolution could yield tens of mergers per Gpc$^{3}$ per yr$^{-1}$ in the local Universe \citep{MandeldeMink:2016,Marchant:2016}.
 
 \subsubsection{Binary evolution via a common envelope}\label{sec:CErates}
 
-In order to survive an evolutionary pathway such as the one depicted in \autoref{fig:isol_binary}, a binary must (i) have the right component masses to form two black holes; (ii) have the right separation to avoid a premature merger, yet be close enough to interact; (iii) avoid disruption by supernova kicks; (iv) engage in and survive a common envelope phase; and (v) end up sufficiently compact at binary black hole formation to merge within the age of the Universe. We describe below the development of a ``Drake equation'' for the probability that an isolated stellar binary will end its life as a merging binary black hole, addressing each of these five factors in turn.   \ilya{In reality, of course, the \ajf{probabilities} for each key stage are coupled in a rather complex manner.}
+In order to survive an evolutionary pathway such as the one depicted in \autoref{fig:isol_binary}, a binary must (i) have the right component masses to form two black holes; (ii) have the right separation to avoid a premature merger, yet be close enough to interact; (iii) avoid disruption by supernova kicks; (iv) engage in and survive a common envelope phase; and (v) end up sufficiently compact at binary black hole formation to merge within the age of the Universe. We describe below the development of a ``Drake equation'' for the probability that an isolated stellar binary will end its life as a merging binary black hole, addressing each of these five factors in turn.   In reality, of course, the probabilities for each key stage are coupled in a rather complex manner.
 
 \begin{enumerate}
-	\item[(i)] The minimal initial stellar mass for forming a black hole is likely around $20 M_\odot$, so $f_\textrm{primary} \approx 0.1\%$ of all stars drawn from the \citet{Kroupa:2002} initial mass function will form black holes. Although this can be shifted somewhat by binary interactions, \ajf{we will use this approximation} for the purpose of this back-of-the-envelope calculation. Meanwhile, since the mass ratio between the primary and the secondary is roughly uniformly distributed \citep{Sana:2012,MoeDiStefano:2017}, roughly half of the secondaries will fall into the mass range of interest, $f_\textrm{secondary} \approx 0.5$.  
+	\item[(i)] The minimal initial stellar mass for forming a black hole is likely around $20 M_\odot$, so $f_\textrm{primary} \approx 0.1\%$ of all stars drawn from the \citet{Kroupa:2002} initial mass function will form black holes. Although this can be shifted somewhat by binary interactions, we will use this approximation for the purpose of this back-of-the-envelope calculation. Meanwhile, since the mass ratio between the primary and the secondary is roughly uniformly distributed \citep{Sana:2012,MoeDiStefano:2017}, roughly half of the secondaries will fall into the mass range of interest, $f_\textrm{secondary} \approx 0.5$.  
 
-\item[(ii)] Initial binary  separations are observed to be distributed uniformly in the logarithm, $p(a) \propto 1/a$ \citep{Opik:1924}.  The first episode of mass transfer from the donor should typically be \ajf{``}case B\ajf{''} mass transfer (i.e., the donor should evolve beyond core hydrogen burning, but not yet beyond core helium burning); stars expand by several orders of magnitude during this phase, which means that the range of initial separations occupies a significant logarithmic fraction of the total initial range of separations, so $f_\textrm{init sep} \approx 0.5$.  
+\item[(ii)] Initial binary  separations are observed to be distributed uniformly in the logarithm, $p(a) \propto 1/a$ \citep{Opik:1924}.  The first episode of mass transfer from the donor should typically be ``case B'' mass transfer (i.e., the donor should evolve beyond core hydrogen burning, but not yet beyond core helium burning); stars expand by several orders of magnitude during this phase, which means that the range of initial separations occupies a significant logarithmic fraction of the total initial range of separations, so $f_\textrm{init sep} \approx 0.5$.  
 
 \item[(iii)]  We assume that black holes receive low natal kicks and do not lose significant amounts of mass, so that supernovae do not significantly affect binary parameters, i.e. $f_\textrm{survive SN1} \approx f_\textrm{survive SN2} \approx 1$.  
 
-\item[(iv)] The fraction of binaries that initiate and survive the common envelope phase during mass transfer from the secondary to the primary is perhaps the least certain.  Typically, dynamically unstable mass transfer is more likely for greater mass ratios of the donor to the accretor.  The accreting black hole in this case may only have a third of the initial mass of the primary, with the rest lost with the envelope and through winds, while the secondary donor may have increased its mass during the first mass transfer phase; even so, unless the secondary was initially close to the primary in mass, the mass ratio is unlikely to exceed $3:1$, which may be close to the threshold for initiating a common envelope phase.  The evolutionary state of the donor during the onset of mass transfer also plays an important role, setting both the amount by which the donor shrinks \ilya{or expands} in response to mass loss and the envelope binding energy.  Together, these constraints reduce the fraction of successful common envelope initiations and ejections to $f_\textrm{CE} \approx 0.1$.  
+\item[(iv)] The fraction of binaries that initiate and survive the common envelope phase during mass transfer from the secondary to the primary is perhaps the least certain.  Typically, dynamically unstable mass transfer is more likely for greater mass ratios of the donor to the accretor.  The accreting black hole in this case may only have a third of the initial mass of the primary, with the rest lost with the envelope and through winds, while the secondary donor may have increased its mass during the first mass transfer phase; even so, unless the secondary was initially close to the primary in mass, the mass ratio is unlikely to exceed $3:1$, which may be close to the threshold for initiating a common envelope phase.  The evolutionary state of the donor during the onset of mass transfer also plays an important role, setting both the amount by which the donor shrinks or expands in response to mass loss and the envelope binding energy.  Together, these constraints reduce the fraction of successful common envelope initiations and ejections to $f_\textrm{CE} \approx 0.1$.  
 
 \item[(v)]  Finally, there is the question of final separation at second black hole formation, as only systems with separations smaller than those in \autoref{fig:periapsis} will merge in the age of the Universe.  The final separation after the common envelope ejection is set by the binding energy of the envelope at the time when the secondary initiates unstable mass transfer, which in turn depends on the binary separation at that time.  Therefore, very crudely, the flat-in-the-log distribution of initial binary separations persists to the final binary separation.  Since the delay time between formation and merger $\tau_\textrm{GW} \propto a^4$ is a power law in the separation, the delay time distribution also follows a flat-in-the-log distribution $p(\tau) \propto 1/\tau$.  Among the binaries that survive a common envelope the closest will be those whose separations just barely encompass a Wolf-Rayet star, i.e., with separations of a few solar radii (and merger times of a few million years).  The logarithmic distribution ensures that tens of percent of binaries that survive a common envelope will merge in the age of the Universe, $f_\textrm{merge} \approx 0.2$.
 \end{enumerate}
@@ -342,11 +342,11 @@ In order to survive an evolutionary pathway such as the one depicted in \autoref
 Thus, our Drake equation is as follows:
 \begin{eqnarray}
 f_\textrm{BBH} &=& f_\textrm{primary} \times f_\textrm{secondary} \times f_\textrm{init sep} \times f_\textrm{survive SN1} \times f_\textrm{CE} \times f_\textrm{survive SN2} \times f_\textrm{merge} \nonumber \\
- & \sim & 0.001 \times 0.5 \times 0.5 \times 1 \times 0.1 \times 1 \times \ilya{0.2} = 5 \times 10^{-6}.
+ & \sim & 0.001 \times 0.5 \times 0.5 \times 1 \times 0.1 \times 1 \times 0.2 = 5 \times 10^{-6}.
 \end{eqnarray}
 Merging binary black holes are rare outcomes indeed!  [Merging binary neutron stars are similarly rare: while stars with initial masses sufficient to form a neutron star, between roughly 8 and 20 solar masses, are more common than the heavier stars necessary to form black holes, neutron star natal kicks and mass loss during supernovae are more likely to disrupt binaries; the expected yields for binary neutron star mergers are within an order of magnitude of those for binary black holes.]
 
-The star formation rate in the local Universe is $\sim 0.01 M_\odot$ Mpc$^{-3}$ yr$^{-1}$ \citep{MadauDickinson:2014}; for an average binary mass of $\sim 1 M_\odot$, the yield $f_\textrm{BBH} \sim 5 \times 10^{-6}$ corresponds to a binary black hole merger rate of \ilya{$\sim 50$} Gpc$^{-3}$ yr$^{-1}$, or \ilya{5} per Myr for a Milky-Way equivalent galaxy with a space density of $0.01$ Mpc$^{-3}$.  Of course, the actual calculation of the binary merger rate requires significantly more care than the back-of-the-envelope model presented here, including accounting for the redshift-dependent metallicity-specific star formation history convolved with the time-delay distribution.  
+The star formation rate in the local Universe is $\sim 0.01 M_\odot$ Mpc$^{-3}$ yr$^{-1}$ \citep{MadauDickinson:2014}; for an average binary mass of $\sim 1 M_\odot$, the yield $f_\textrm{BBH} \sim 5 \times 10^{-6}$ corresponds to a binary black hole merger rate of $\sim 50$ Gpc$^{-3}$ yr$^{-1}$, or 5 per Myr for a Milky-Way equivalent galaxy with a space density of $0.01$ Mpc$^{-3}$.  Of course, the actual calculation of the binary merger rate requires significantly more care than the back-of-the-envelope model presented here, including accounting for the redshift-dependent metallicity-specific star formation history convolved with the time-delay distribution.  
 
 \subsubsection{Chemically homogeneous evolution}
 
@@ -356,26 +356,27 @@ f_\textrm{BBH} &=& f_\textrm{primary} \times f_\textrm{secondary} \times f_\text
  & \sim & 0.0002 \times 0.5 \times 0.1 \times 0.1 \times 1 = 10^{-6}.
 \end{eqnarray}
 
-Here, $f_\textrm{primary} \approx 2 \times 10^{-4}$, lower than the value in the previous paragraph because only the most massive stars with initial masses above $\sim 50 M_\odot$ are likely to have the necessary level of mixing to undergo chemically homogeneous evolution; and $f_\textrm{secondary} \approx 0.5$ as above.  In order to engage in efficient mixing, the components must be close enough to be tidally locked and rotating at a significant fraction of the break-up velocity, yet avoid merger; this defines a range of initial separations spanning roughly a factor of 2 out of a total range spanning $\approx 5$ orders of magnitude, so $f_\textrm{init sep} \approx 0.1$ \ilya{assuming a flat-in-the-logarithm distribution of initial separations}.  Finally, $f_Z \approx 0.1$ is the total historical fraction of low-metallicity star formation, required to suppress line-driven winds which widen the binary, spin down the stars, and suppress mixing.  Because these binaries are constructed to be very tight at birth, the vast majority should merge after the stars collapse into black holes in situ, and \ilya{$f_\textrm{merge} \approx 1$}. Thus, if this channel is viable, the rate of binary black hole mergers produced through the chemically homogeneous evolution channel could reach perhaps $\sim 10$ Gpc$^{-3}$ yr$^{-1}$, but with a preference for much higher masses than classical isolated binary evolution.
+Here, $f_\textrm{primary} \approx 2 \times 10^{-4}$, lower than the value in the previous paragraph because only the most massive stars with initial masses above $\sim 50 M_\odot$ are likely to have the necessary level of mixing to undergo chemically homogeneous evolution; and $f_\textrm{secondary} \approx 0.5$ as above.  In order to engage in efficient mixing, the components must be close enough to be tidally locked and rotating at a significant fraction of the break-up velocity, yet avoid merger; this defines a range of initial separations spanning roughly a factor of 2 out of a total range spanning $\approx 5$ orders of magnitude, so $f_\textrm{init sep} \approx 0.1$ assuming a flat-in-the-logarithm distribution of initial separations.  Finally, $f_Z \approx 0.1$ is the total historical fraction of low-metallicity star formation, required to suppress line-driven winds which widen the binary, spin down the stars, and suppress mixing.  Because these binaries are constructed to be very tight at birth, the vast majority should merge after the stars collapse into black holes in situ, and $f_\textrm{merge} \approx 1$. Thus, if this channel is viable, the rate of binary black hole mergers produced through the chemically homogeneous evolution channel could reach perhaps $\sim 10$ Gpc$^{-3}$ yr$^{-1}$, but with a preference for much higher masses than classical isolated binary evolution.
 
 
 \subsubsection{Dynamical formation}
 
-We can estimate an upper limit on the merger rate of dynamically formed binary black holes by assuming that all black holes in a globular cluster undergo a single merger.  About 1 in a thousand stars are massive enough to become a black hole \ajf{($f_\textrm{primary} \approx 0.001$)}, so even a relatively large cluster with $2\times 10^6$ stars would produce only 2000 black  holes and 1000 mergers.  [Although repeated mergers are possible if the black hole merger product is retained in the cluster and merges again, they are very rare as gravitational-wave recoil kicks are overwhelmingly likely to eject a merger remnant from the cluster \citep{Rodriguez:2018}; in any case, even merging all black holes sequentially would increase this estimate by at most a factor of 2.]  If we imagine that the merger rate is uniform over the $\sim 10$-Gyr history of the Universe (if mergers predominantly happened early in the cluster history, the rate in the local Universe would be lower), and with a globular cluster space density of around 1 per Mpc$^3$, the \ilya{\it upper limit} on the merger rate from this channel is $\sim 1000 \times 10^{-10} \textrm{yr}^{-1} \times 1 \textrm{ Mpc}^{-3} \approx 100$ Gpc$^{-3}$ yr$^{-1}$.
+We can estimate an upper limit on the merger rate of dynamically formed binary black holes by assuming that all black holes in a globular cluster undergo a single merger.  About 1 in a thousand stars are massive enough to become a black hole ($f_\textrm{primary} \approx 0.001$), so even a relatively large cluster with $2\times 10^6$ stars would produce only 2000 black  holes and 1000 mergers.  [Although repeated mergers are possible if the black hole merger product is retained in the cluster and merges again, they are very rare as gravitational-wave recoil kicks are overwhelmingly likely to eject a merger remnant from the cluster \citep{Rodriguez:2018}; in any case, even merging all black holes sequentially would increase this estimate by at most a factor of 2.]  If we imagine that the merger rate is uniform over the $\sim 10$-Gyr history of the Universe (if mergers predominantly happened early in the cluster history, the rate in the local Universe would be lower), and with a globular cluster space density of around 1 per Mpc$^3$, the {\it upper limit} on the merger rate from this channel is $\sim 1000 \times 10^{-10} \textrm{yr}^{-1} \times 1 \textrm{ Mpc}^{-3} \approx 100$ Gpc$^{-3}$ yr$^{-1}$.
 
-Young massive star clusters could \ajf{add} to this rate \citep[e.g.,][]{Ziosi:2014}, as could galactic nuclear clusters \citep[e.g.,][]{MillerLauburg:2008,Bartos:2016,Stone:2016,AntoniniRasio:2016}.  On the other hand, in practice, the \ajf{overall merger rate from the dynamical formation channel} is likely to be at least a factor of a few lower for the following reasons\ajf{:} 
+Young massive star clusters could add to this rate \citep[e.g.,][]{Ziosi:2014}, as could galactic nuclear clusters \citep[e.g.,][]{MillerLauburg:2008,Bartos:2016,Stone:2016,AntoniniRasio:2016}.  On the other hand, in practice, the overall merger rate from the dynamical formation channel is likely to be at least a factor of a few lower for the following reasons:
 \begin{enumerate}
-	\item [\ajf{1.}]
-Some single black holes will be ejected from the cluster during \ajf{the} three-body interactions \ajf{that} harden the binaries.  If the masses of all interacting objects are similar, the ejected object receives a kick that is comparable to the orbital \ajf{speed} of the binary.  The last scattering interaction must harden the binary to a sufficiently small separation for gravitational-wave emission to take over. \ajf{The minimum orbital velocity of a binary that can merge in the age of Universe through gravitational-wave emission is $\sim 100$ km s$^{-1}$; this scales only weakly with the binary's mass, as $a \propto M^{3/4}$ (see \autoref{fig:periapsis} and \citet{Peters:1964}).}   This minimum velocity is larger than the typical globular cluster escape velocity, $\lesssim 50$ km s$^{-1}$, \ajf{and} so many interlopers, including some black holes, will be ejected.
-\item[\ajf{2.}]Following such a 3-body interaction, the binary itself must recoil in the opposite direction from the ejected single star \ajf{(}to conserve momentum\ajf{)}. Although this recoil velocity is reduced by the ratio of the binary's mass to the interloper mass \ajf{---} typically greater than $2:1${\ajf,} as the lightest body is ejected \ajf{---} the binary may still be ejected from the cluster before it is sufficiently tight to merge through radiation reaction alone.
-\item[\ajf{3.}] If most mergers happen soon after globular cluster formation, the local merger rate would be low \ajf{because} the majority of globular clusters are old \citep{Rodriguez:2016big}.
+	\item [1.]
+Some single black holes will be ejected from the cluster during the three-body interactions that harden the binaries.  If the masses of all interacting objects are similar, the ejected object receives a kick that is comparable to the orbital speed of the binary.  The last scattering interaction must harden the binary to a sufficiently small separation for gravitational-wave emission to take over. The minimum orbital velocity of an equal-mass circular binary that can merge in the age of Universe through gravitational-wave emission is $\sim 200$ km s$^{-1}$; this scales only weakly with the binary's mass, as $v \propto \sqrt{M/a}  \propto \sqrt{M/M^{3/4}} \propto M^{1/8}$ (see \autoref{fig:periapsis} and \citet{Peters:1964}).   This minimum velocity is larger than the typical globular cluster escape velocity, $\lesssim 50$ km s$^{-1}$, hence many interlopers, including some black holes, will be ejected.
+	\item[2.]
+Following such a 3-body interaction, the binary itself must recoil in the opposite direction from the ejected single star (to conserve momentum). Although this recoil velocity is reduced by the ratio of the binary's mass to the interloper mass --- typically greater than $2:1$, as the lightest body is ejected --- the binary may still be ejected from the cluster before it is sufficiently tight to merge through radiation reaction alone.
+\item[3.] If most mergers happen soon after globular cluster formation, the local merger rate would be low because the majority of globular clusters are old \citep{Rodriguez:2016big}.
 \end{enumerate} 
 
 \subsection{System Properties}
 \subsubsection{Masses}
-\ilya{The masses of black holes in \ajf{the} binaries of interest will not change appreciably after the black holes are formed by stellar collapse or supernova explosions.}  The first black hole to form is unlikely to accrete a significant amount of mass from its companion: doubling its mass would take more than 100 million years\ajf{,} \ilya{as the mass-gain rate is $\dot{M}/M \lesssim 10^{-8}$ yr$^{-1}$ at the Eddington limit}, and the massive companion will only survive \ilya{as a non-degenerate potential donor star} for a small fraction of that time. \ilya{No further accretion is expected \ajf{in the system} after the second compact object is formed.} The mass of each black hole is thus almost equal to its mass at formation. 
+The masses of black holes in the binaries of interest will not change appreciably after the black holes are formed by stellar collapse or supernova explosions.  The first black hole to form is unlikely to accrete a significant amount of mass from its companion: doubling its mass would take more than 100 million years, as the mass-gain rate is $\dot{M}/M \lesssim 10^{-8}$ yr$^{-1}$ at the Eddington limit, and the massive companion will only survive as a non-degenerate potential donor star for a small fraction of that time. No further accretion is expected in the system after the second compact object is formed. The mass of each black hole is thus almost equal to its mass at formation. 
 
-The classical isolated binary evolution channel can produce binary black holes with a broad range of masses, matching all observations to date \ilya{\citep[e.g.,][]{Stevenson:2017,Eldridge:2017,GiacobboMapelli:2018}} as well as GW170817 and the observed Galactic double neutron stars \citep[e.g.,][]{Kruckow:2018,VignaGomez:2018}.  In fact, contrary to mistaken lore, the high masses of the first observed black holes were not entirely surprising: such systems were predicted to arise in low-metallicity environments, and \ajf{to} make a significant contribution to the detected population because more massive binaries emit more energy in gravitational waves \citep{Dominik:2014}; the effect of metallicity is discussed further in \autoref{environ} below. 
+The classical isolated binary evolution channel can produce binary black holes with a broad range of masses, matching all observations to date \citep[e.g.,][]{Stevenson:2017,Eldridge:2017,GiacobboMapelli:2018} as well as GW170817 and the observed Galactic double neutron stars \citep[e.g.,][]{Kruckow:2018,VignaGomez:2018}.  In fact, contrary to mistaken lore, the high masses of the first observed black holes were not entirely surprising: such systems were predicted to arise in low-metallicity environments, and to make a significant contribution to the detected population because more massive binaries emit more energy in gravitational waves \citep{Dominik:2014}; the effect of metallicity is discussed further in \autoref{environ} below. 
 
 Dynamical formation in globular clusters can also lead to a range of masses, but may favor more massive binaries: lighter black holes would be ejected by heavier ones in three-body interactions \citep{Rodriguez:2015}. The mass distribution is sensitive to natal kicks, which may eject black holes at formation \citep{Zevin:2017}.  \citet{Chatterjee:2017} argue that dynamical formation could explain all black hole binary merger observations to date, with old, metal-poor clusters preferentially contributing more massive black hole binaries and younger, metal-rich clusters contributing lighter binaries.
  
@@ -384,18 +385,18 @@ Chemically homogeneous evolution can only produce massive binaries, with total b
 \subsubsection{Mass ratios}
 The mass ratios of merging black hole binaries produced through the isolated binary evolution channel are likely to be on the equal side of $2:1$, because of the mass ratio constraints necessary to ensure stable mass transfer from the primary to the secondary and then dynamically unstable reverse mass transfer. However, mass ratios exceeding $2:1$ are expected to be more common at low metallicity \citep{Dominik:2012,Stevenson:2017}.
 
-Dynamically formed binaries may also favor comparable masses because the heaviest black holes in a cluster are most likely to merge, though more extreme mass ratios are also possible if the globular cluster contains a particularly heavy stellar-mass black hole or a \ilya{$\gtrsim 100 M_\odot$} intermediate-mass black hole \citep{Mandel:2008,Belczynski:2014VMS}. 
+Dynamically formed binaries may also favor comparable masses because the heaviest black holes in a cluster are most likely to merge, though more extreme mass ratios are also possible if the globular cluster contains a particularly heavy stellar-mass black hole or a $\gtrsim 100 M_\odot$ intermediate-mass black hole \citep{Mandel:2008,Belczynski:2014VMS}. 
 
-Chemically homogeneous evolution has a much stronger preference for equal masses \citep{MandeldeMink:2016}.  \citet{Marchant:2016} concluded that nearly equal-mass black holes would be produced from the evolution of systems that were in contact (shared mass) on the main sequence, before disengaging during subsequent phases of chemically homogeneous evolution and proceeding along the pathway sketch\ajf{ed} out in \autoref{sec:CHE}. 
+Chemically homogeneous evolution has a much stronger preference for equal masses \citep{MandeldeMink:2016}.  \citet{Marchant:2016} concluded that nearly equal-mass black holes would be produced from the evolution of systems that were in contact (shared mass) on the main sequence, before disengaging during subsequent phases of chemically homogeneous evolution and proceeding along the pathway sketched out in \autoref{sec:CHE}. 
 
 \subsubsection{Black hole spin magnitudes and directions}
 The spins of merging black holes may carry imprints of their evolutionary history. 
 
-Isolated binaries, including those formed through chemically homogeneous evolution, are generally expected to have preferentially aligned spins after undergoing episodes of mass transfer and/or tidal coupling, although natal kicks and possible spin tilts during supernovae could lead to misalignment \citep[e.g.,][]{Farr:2011,Tauris:2017}.  Meanwhile, the spin directions \ajf{for dynamically formed binaries} are likely to be distributed \ajf{isotropically}  \citep[e.g.,][]{Rodriguez:2016spin}.  On the other hand, black holes merging through the Lidov-Kozai resonance in hierarchical triples could preferentially have spins in the orbital plane \citep{LiuLai:2018,RodriguezAntonini:2018}.
+Isolated binaries, including those formed through chemically homogeneous evolution, are generally expected to have preferentially aligned spins after undergoing episodes of mass transfer and/or tidal coupling, although natal kicks and possible spin tilts during supernovae could lead to misalignment \citep[e.g.,][]{Farr:2011,Tauris:2017}.  Meanwhile, the spin directions for dynamically formed binaries are likely to be distributed isotropically \citep[e.g.,][]{Rodriguez:2016spin}.  On the other hand, black holes merging through the Lidov-Kozai resonance in hierarchical triples could preferentially have spins in the orbital plane \citep{LiuLai:2018,RodriguezAntonini:2018}.
 
-Spin magnitudes may also depend sensitively on evolutionary history.  \ajf{A} massive star may contain a \ajf{large amount} of angular momentum, far in excess of the maximum allowed for a spinning black hole. \ajf{However,} the vast majority of that angular momentum will be contained in the outer layers of the star and can therefore \ajf{readily} be lost through winds or \ajf{via} envelope stripping by a companion.  Therefore, black holes formed from stars that were rapidly spinning at some point in their evolution may still spin slowly unless the stars are spun up through mass transfer or tides shortly before collapse \citep{Kushnir:2016,HotokezakaPiran:2017,Zaldarriaga:2017} or during the supernova itself \citep{Batta:2017,Schroeder:2018}.   This argument for slowly spinning black holes in compact binaries is potentially in conflict with the claimed observations of rapid spins in black-hole high mass X-ray binaries \citep{MillerMiller:2015}. \ajf{***Moved from Section 2:*** However, the spin magnitude measurements in X-ray binaries could be very sensitive to the modelling assumptions, and the systematic errors may dominate the statistical ones \citep[e.g.,][]{Basak:2017,Kawano:2017}. Moreover, there may be significant differences in the evolutionary channels and environments of the locally observed high-mass X-ray binaries and the binary black holes observed in gravitational waves \citep[][and see \autoref{environ}]{HotokezakaPiran:2017}.}
+Spin magnitudes may also depend sensitively on evolutionary history.  A massive star may contain a large amount of angular momentum, far in excess of the maximum allowed for a spinning black hole. However, the vast majority of that angular momentum will be contained in the outer layers of the star and can therefore readily be lost through winds or via envelope stripping by a companion.  Therefore, black holes formed from stars that were rapidly spinning at some point in their evolution may still spin slowly unless the stars are spun up through mass transfer or tides shortly before collapse \citep{Kushnir:2016,HotokezakaPiran:2017,Zaldarriaga:2017} or during the supernova itself \citep{Batta:2017,Schroeder:2018}.   This argument for slowly spinning black holes in compact binaries is potentially in conflict with the claimed observations of rapid spins in black-hole high mass X-ray binaries \citep{MillerMiller:2015}. \ajf{***Moved from Section 2:*** However, the spin magnitude measurements in X-ray binaries could be very sensitive to the modelling assumptions, and the systematic errors may dominate the statistical ones \citep[e.g.,][]{Basak:2017,Kawano:2017}. Moreover, there may be significant differences in the evolutionary channels and environments of the locally observed high-mass X-ray binaries and the binary black holes observed in gravitational waves \citep[][and see \autoref{environ}]{HotokezakaPiran:2017}.}
 
-Gravitational-wave spin measurements have so far only constrained \ilya{the effective spin}, which enters the phasing of gravitational waves at the 1.5 post-Newtonian order \citep{PoissonWill:1995}.  The low effective spins of the first four detected merging black holes allowed \citet{Farr:2017} to conclude that either the spin directions were isotropically distributed or the spin magnitudes were low.
+Gravitational-wave spin measurements have so far only constrained the effective spin, which enters the phasing of gravitational waves at the 1.5 post-Newtonian order \citep{PoissonWill:1995}.  The low effective spins of the first four detected merging black holes allowed \citet{Farr:2017} to conclude that either the spin directions were isotropically distributed or the spin magnitudes were low.
 
 \subsubsection{Orbital eccentricities}
 	The orbital eccentricities of merging black hole binaries may contain information about their past \citep{MandelOShaughnessy:2010}. Because gravitational waves are very efficient at damping out orbital eccentricity, isolated binaries are expected to merge on circular orbits. Dynamically formed systems may, however, retain \ilya{detectable} eccentricities at merger if their orbits are very tight at formation \ajf{***can we make this quantitative (no worries if not easy)? all merging binaries have to be somewhat tight at formation, but these have to be tighter?***}. Dynamical formation of \ajf{very} tight binaries may be possible  through two-body captures in Galactic nuclei \citep{OLeary:2008} \citep[but see][]{Tsang:2013}\ajf{;} \ilya{in \ajf{some} hierarchical triples evolving through the Lidov-Kozai mechanism \citep[e.g.,][]{AntoniniPerets:2012}}\ajf{;} or through close captures during three-body interactions \citep{Samsing:2014, Rodriguez:2018}. 
