Tiny wording tweaks.

--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -366,7 +366,7 @@ We can estimate an upper limit on the merger rate of dynamically formed binary b
 Young massive star clusters could add to this rate \citep[e.g.,][]{Ziosi:2014}, as could galactic nuclear clusters \citep[e.g.,][]{MillerLauburg:2008,Bartos:2016,Stone:2016,AntoniniRasio:2016}.  On the other hand, in practice, the overall merger rate from the dynamical formation channel is likely to be at least a factor of a few lower for the following reasons:
 \begin{enumerate}
 	\item [1.]
-Some single black holes will be ejected from the cluster during the three-body interactions that harden the binaries.  If the masses of all interacting objects are similar, the ejected object receives a kick that is comparable to the orbital speed of the binary.  The last scattering interaction must harden the binary to a sufficiently small separation for gravitational-wave emission to take over. The minimum orbital velocity of an equal-mass circular binary that can merge in the age of Universe through gravitational-wave emission is $\sim 200$ km s$^{-1}$; this scales only weakly with the binary's mass, as $v \propto \sqrt{M/a}  \propto \sqrt{M/M^{3/4}} \propto M^{1/8}$ (see \autoref{fig:periapsis} and \citet{Peters:1964}).   This minimum velocity is larger than the typical globular cluster escape velocity, $\lesssim 50$ km s$^{-1}$, hence many interlopers, including some black holes, will be ejected.
+Some single black holes will be ejected from the cluster during the three-body interactions that harden the binaries.  If the masses of all interacting objects are similar, the ejected object receives a kick that is comparable to the orbital speed of the binary.  The last scattering interaction must harden the binary to a sufficiently small separation for gravitational-wave emission to take over. The minimum orbital velocity of an equal-mass circular binary that can merge in the age of the Universe through gravitational-wave emission is $\sim 200$ km s$^{-1}$; this scales only weakly with the binary's mass, as $v \propto \sqrt{M/a}  \propto \sqrt{M/M^{3/4}} \propto M^{1/8}$ (see \autoref{fig:periapsis} and \citet{Peters:1964}).   This minimum velocity is larger than the typical globular cluster escape velocity, $\lesssim 50$ km s$^{-1}$, hence many interlopers, including some black holes, will be ejected.
 	\item[2.]
 Following such a 3-body interaction, the binary itself must recoil in the opposite direction from the ejected single star (to conserve momentum). Although this recoil velocity is reduced by the ratio of the binary's mass to the interloper mass --- typically greater than $2:1$, as the lightest body is ejected --- the binary may still be ejected from the cluster before it is sufficiently tight to merge through radiation reaction alone.
 \item[3.] If most mergers happen soon after globular cluster formation, the local merger rate would be low because the majority of globular clusters are old \citep{Rodriguez:2016big}.
@@ -399,7 +399,7 @@ Spin magnitudes may also depend sensitively on evolutionary history.  A massive 
 Gravitational-wave spin measurements have so far only constrained the effective spin, which enters the phasing of gravitational waves at the 1.5 post-Newtonian order \citep{PoissonWill:1995}.  The low effective spins of the first four detected merging black holes allowed \citet{Farr:2017} to conclude that either the spin directions were isotropically distributed or the spin magnitudes were low.
 
 \subsubsection{Orbital eccentricities}
-	The orbital eccentricities of merging black hole binaries may contain information about their past \citep{MandelOShaughnessy:2010}. Because gravitational waves are very efficient at damping out orbital eccentricity, isolated binaries are expected to merge on circular orbits. Dynamically formed systems may, however, retain detectable eccentricities at merger if their orbits are very tight at formation: the periapsis of a highly eccentric binary would need to be $\lesssim 10^4$ km in order for the eccentricity to exceed 0.1 when the gravitational-wave frequency reaches the minimum of the detector sensitive band at 10 Hz.  Dynamical formation of very tight binaries may be possible through two-body captures in Galactic nuclei \citep{OLeary:2008} \citep[but see][]{Tsang:2013}; in some hierarchical triples evolving through the Lidov-Kozai mechanism \citep[e.g.,][]{AntoniniPerets:2012}; or through close captures during three-body interactions \citep{Samsing:2014, Rodriguez:2018}. 
+	The orbital eccentricities of merging black hole binaries may contain information about their past \citep{MandelOShaughnessy:2010}. Because gravitational waves are very efficient at damping out orbital eccentricity, isolated binaries are expected to merge on circular orbits. Dynamically formed systems may, however, retain detectable eccentricities at merger if their orbits are very tight at formation: the periapsis of a highly eccentric binary would need to be $\lesssim 10^4$ km in order for the eccentricity to exceed 0.1 when the gravitational-wave frequency reaches the minimum of the detector sensitivity band at 10 Hz.  Dynamical formation of very tight binaries may be possible through two-body captures in Galactic nuclei \citep{OLeary:2008} \citep[but see][]{Tsang:2013}; in some hierarchical triples evolving through the Lidov-Kozai mechanism \citep[e.g.,][]{AntoniniPerets:2012}; or through close captures during three-body interactions \citep{Samsing:2014, Rodriguez:2018}. 
 
 
 \subsubsection{Formation environments}
